refactor(quality): cut over controllers and remove service package